resources/main.css
h2, h3, legend, label {    
    color: #FFF;
    line-height: 1.2em;
}

#header {
    background-color: #FF953D;
}

#header h1 {
    font: italic bold 1em Helvetica, sans-serif;
    color: #B65300;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    margin: 0;
}

#header p {
    font: normal bold 0.8em Helvetica, sans-serif;
    color: #B65300;
    padding-top: 0.7em;
    padding-bottom: 0.5em;
    margin: 0;
}

#editHeaderBTN {
    font-size: 0.8em;    
    color: #B65300;
}

#main {    
    background-color: #FF7400; 
    border-bottom: 0.25em solid #FF7400;
    min-height: 96vh;    
}

legend {
    font-size: 1.25em;
}

#fixtures .roundHeader {  
    background-color: #FF953D; 
    text-align: center;
    font-size: 14px;
} 

#fixtures .rId {
    border: 1px solid #FFE5D0;
    background-color: #FF7400;
    color: #FFE5D0;
    border-radius: 100%;
    position: absolute;
    z-index: 99;
    top: -4px;
    left: 0;
    width: 2em;
    height: 2em;
    line-height: 2em;
    font-weight: bold;
}

#fixtures .rId.completed {    
    background-color: limegreen;
    color: white;
}

#fixtures .btn:focus {
    border-color: #0D6EFD ;
    box-shadow: 0 0 0 .25rem rgba(13, 110, 253, .5); 
}

#fixtures .cNumber {
    text-align: center;
} 

#leaderboard {
    background-color: #FF953D;
}

#leaderboard .lb-even { background-color: #FFE5D0; }
#leaderboard .lb-odd { background-color: #F8F9FA; }

#leaderboard > div {
    height: 2.4em;
    display : flex;
    align-items : center;
}

#leaderboard > div p {    
    display: inline-block;
    line-height: 1.2em;
    margin: 0;
}

.lbOrd {
    color: #FF953D;
    font-weight: bold;
}

.fxTableWrap {    
    margin: 0 0 1em; 
    font-size: 12px;
}

.fxTable {
    width: 100%;
    overflow-x: auto;
    overflow-y: hidden;
}

.fxTable .side1 {
    border-top: 1px solid #B65300;
}

.fxTable .side2 {
    border-bottom: 1px solid #B65300;
}

.fxCell {
    overflow-x: hidden;
}

.fxTable .btn {
    width: 100%;
    height: calc(3.6em + 4px);
    overflow-y: clip;
    text-overflow: ellipsis;
    line-height: 1.2em;
    padding: 2px;
}

.fxTable .btn.btn-success {
    color: #000;
    background-color: #4F4;
}

.fxTable .btn.btn-danger {
    color: #000;
    background-color: #FA9;
}

.fxTable .btn.btn-warning {
    color: #000;
    background-color: #FF8;
}

.fxTable .btn.btn-light:disabled {
    background-color: transparent;
}

.shrink {
    animation: shrink .3s forwards alternate; 
}

.jiggle {
    animation: jiggle 1.5s forwards ease-in-out;
}

@keyframes shrink {
    0% { }
    100% { transform: scale(.9); } 
}
 
@keyframes jiggle {
    0% { transform: scale(.9); }
    10% { transform: scale(1.1); }
    20% { transform: scale(.9); }
    30% { transform: scale(1.05); }
    40% { transform: scale(.95); }
    50% { transform: scale(1.025); }
    60% { transform: scale(.975); }
    70% { transform: scale(1.02); }
    80% { transform: scale(.985); }
    90% { transform: scale(1.01); }
    100% { transform: scale(1); }
}

.autocomplete {
    position: relative;
}

.autocompleteList {
  position: absolute;
  border: 1px solid #CCC;
  border-bottom: none;
  border-top: none;
  z-index: 99;
  top: 100%;
  left: 2rem;
}

.autocompleteList div {
  padding: 0.25rem 0.5rem;
  cursor: pointer;
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
}

.autocompleteList div:hover {
  background-color: #EEE;
}

.autocomplete-active {
  background-color: #0D6EFD !important;
  color: #FFF;
}

@media screen and (min-width: 576px) {

    @supports (scrollbar-color: auto) {

        .fxTable {
            scrollbar-width: thin;
            scrollbar-color: #FF7400 #EEE;
        }
    
        #fixtures {
            scrollbar-color: #FF7400 #EEE;
        }

    }

    @supports selector(::-webkit-scrollbar) {
    
        .fxTable::-webkit-scrollbar { height: 10px; width: 15px; }
        .fxTable::-webkit-scrollbar-track { background: #EEE; }
        .fxTable::-webkit-scrollbar-button { background: #FF7400; }
        .fxTable::-webkit-scrollbar-thumb { background: #FF7400; }
        .fxTable::-webkit-scrollbar-thumb:hover { background: #B65300; }

        #fixtures::-webkit-scrollbar { height: 10px; width: 15px; }
        #fixtures::-webkit-scrollbar-track { background: #EEE; }
        #fixtures::-webkit-scrollbar-button { background: #FF7400; }
        #fixtures::-webkit-scrollbar-thumb { background: #FF7400; }
        #fixtures::-webkit-scrollbar-thumb:hover { background: #B65300; }
    }

}

@media screen and (min-width: 768px) {

    #frontendMain, #frontendAside {
        margin-left: -4px;
    }

    #fixtures {
        max-height: calc(100vh - 110px);
        overflow-x: hidden;
        overflow-y: auto;
    } 

    #headerINPUT {
        max-width: 90%;
    }

}

